--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "oryzone/oauth-user-data",
     "description": "Extension library for Lusitanian/PHPoAuthLib to extract user profile data from various oAuth providers",
     "keywords": ["oauth", "authentication", "authorization", "security", "profile", "user"],
-    "homepage": "https://github.com/Oryzone/OryzoneOauthBundle",
+    "homepage": "https://github.com/Oryzone/PHPoAuthUserData",
     "license": "MIT",
     "authors": [
         {
@@ -15,7 +15,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.0",
-        "lusitanian/oauth": "~0.2"
+        "lusitanian/oauth": "~0.2@dev"
     },
     "require-dev" : {
         "phpunit/phpunit": "~3.7"
