--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,13 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.0",
-        "lusitanian/oauth": "~1.0@dev"
+        "lusitanian/oauth": "*"
     },
     "require-dev" : {
         "phpunit/phpunit": "~3.7"
     },
     "autoload": {
-        "psr-4": { 
+        "psr-4": {
         	"OAuth\\UserData\\": "src/OAuth/UserData/",
         	"OAuth\\UserData\\Unit\\": "tests/OAuth/Unit/UserData/"
         }
