--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,4 @@
 /examples export-ignore
 /tests export-ignore
-.gitignore export-ignore
-.scrutinizer.yml export-ignore
-.travis.yml export-ignore
-phpunit.xml.dist export-ignore
+/.* export-ignore
+/phpunit.xml.dist export-ignore
